2010-04-06  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/openvas-nvt-sync.in: Split showing of description in two
	separate case for interactive and API use to make description in GSA
	look better.

2010-04-06  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/greenbone-nvt-sync: Added support for retrieving the version
	of the NVT collection. Removed support for 2.0 infrastructures, tidied
	up parameter handling and function definitions, added check for
	subscription file to self test.

2010-03-11  Matthew Mundell <matthew.mundell@intevation.de>

	Add soft pausing of scans.  Implementation of Change Request #45:
	OpenVAS-Scanner: add pausing of scans,
	http://www.openvas.org/openvas-cr-44.html.

	* openvassd/otp_1_0.h (client_request_t): Add CREQ_PAUSE_WHOLE_TEST and
	CREQ_RESUME_WHOLE_TEST.

	* openvassd/otp_1_0.c (otp_1_0_get_client_request): Add PAUSE_WHOLE_TEST
	and RESUME_WHOLE_TEST commands.

	* openvassd/ntp_11.h (NTP_PAUSE_WHOLE_TEST, NTP_RESUME_WHOLE_TEST): New
	defines.

	* openvassd/ntp_11.c (ntp_11_parse_input): Add CREQ_PAUSE_WHOLE_TEST and
	CREQ_RESUME_WHOLE_TEST handling.

	* openvassd/attack.c (pause_whole_test): New variable.
	(attack_handle_sigusr1, attack_handle_sigusr2): New functions.  Set and
	clear pause_whole_test.
	(attack_host): Check pause_whole_test between plugins and pause if set.
	(attack_start): Set attack_handle_sigusr1 and attack_handle_sigusr2 as
	SIGUSR1 and SIGUSR2 handlers.

	* openvassd/hosts.c (hosts_pause_all, hosts_resume_all): New functions.
	Send pause and resume signal to host process.
	(hosts_read_client): Pause or resume if client gave associated command.

	* openvassd/hosts.h: Add headers accordingly.

2010-04-01  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/openvas-nvt-sync.in: Added support for retrieving the version
	of the NVT collection.

2010-03-31  Matthew Mundell <matthew.mundell@intevation.de>

	* openvassd/nasl_plugins.c, openvassd/utils.c, openvassd/plugs_req.c,